# AIE9

./: .gitignore
00_Docs/Session_Sheets/: 03_The_Agent_Loop.md  04_Agentic_RAG_From_Scratch.md
01_Vibe_Check/: README.md
02_Dense_Vector_Retrieval/: Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Dense_Vector_Retrieval/aimakerspace/: text_utils.py  vectordatabase.py
03_The_Agent_Loop/: The_Agent_Loop_Assignment.ipynb
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  README.md
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb
06_Agent_Memory/: Agent_Memory_Assignment.ipynb
07_Deep_Agents/: Deep_Agents_Assignment.ipynb
07_Deep_Agents/workspace/: Alex_2Week_Integrated_Wellness_Program.txt  alexs_2_week_vegetarian_meal_plan.txt  exercise_program_alex.txt  morning_routine_guide.md  personalized_sleep_improvement_plan.md  sarah_30day_wellness_challenge.md  sarah_quick_reference_guide.md  stress_management_sleep_optimization_plan_for_Alex.txt  stress_management_sleep_optimization_program.txt  user_sarah_30_day_meal_plan.txt  user_sarah_30day_wellness_challenge.md  user_sarah_meal_plan.md  user_sarah_wellness_journal.md  wellness_journal_copy.md  yoga_plan_user_sarah_week1.txt  yoga_plan_user_sarah_week2.txt  yoga_plan_user_sarah_week3.txt  (+1 more)
08_Open_DeepResearch/: open-deep-research.ipynb
09_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  usecase_data_kg.json
10_Evaluating_RAG_With_Ragas/: Evaluating_Agents_Assignment.ipynb  Evaluating_RAG_Assignment.ipynb
(+13 files in other folders)
